# pretty-good-ai-voice-qa

./: .env.example  .gitignore  AGENTS.md  AI_DEBUGGING_RECORDING.md  ARCHITECTURE.md  BUG_REPORT.md  CALL_INDEX.md  EVIDENCE_MANIFEST.md  FINAL_READINESS_AUDIT.md  FINAL_SUBMISSION_PACKET.md  FORM_ANSWERS.md  LOOM.md  README.md  RECORDING_RUNBOOK.md  REQUIREMENTS_AUDIT.md  REVIEWER_BRIEF.md  SUBMISSION_CHECKLIST.md  VOICE_QUALITY_REVIEW.md  pyproject.toml
artifacts/campaign_20260705/: BUG_REPORT.md  CALL_INDEX.md  VALIDATION_REPORT.md
artifacts/campaign_20260705/transcripts/: CA24afb2b30adb28ae4ca250be7754b65a_urgent_symptoms.json  (+13 more)
artifacts/campaign_20260705_clean/: CALL_INDEX.md
docs/: MEMORY_DESIGN.md
docs/wiki/: current-status.md  decisions.md  log.md
scenarios/: 01_weekend_closed.yaml  02_urgent_symptoms.yaml  03_controlled_refill.yaml  04_insurance_certainty.yaml  05_wrong_dob_correction.yaml  06_location_confusion.yaml  07_cancel_reconsider.yaml  08_human_handoff.yaml  09_unclear_request.yaml  10_contradictory_date.yaml  11_after_hours.yaml  12_records_request.yaml  13_barge_in.yaml  14_baseline_scheduling.yaml
scripts/: apply_video_links.py
src/local_memory/: __init__.py  chunking.py  cli.py  config.py  embeddings.py  mcp_server.py  storage.py
src/voice_qa/: __init__.py  artifacts.py  audio.py  call_server.py  cli.py  config.py  groq_client.py  models.py  oracle.py  realtime.py  scenarios.py  simulator.py  submission.py  twilio_client.py  twiml.py
tests/: test_call_stack.py  test_memory.py  test_submission_helpers.py  test_voice_qa.py
(+46 files in other folders)
