[project]
name = "pretty-good-ai-voice-qa"
version = "0.1.0"
description = "Voice QA harness for the Pretty Good AI engineering challenge."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "audioop-lts>=0.2.1 ; python_full_version >= '3.13'",
    "fastapi>=0.139.0",
    "fastembed>=0.7.3",
    "groq>=0.36.0",
    "mcp>=1.13.1",
    "networkx>=3.5",
    "pydantic>=2.12.5",
    "pypdf>=6.4.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.3",
    "rich>=14.2.0",
    "sqlite-vec>=0.1.6",
    "twilio>=9.10.9",
    "typer>=0.20.0",
    "uvicorn[standard]>=0.49.0",
    "websockets>=16.0",
]

[project.scripts]
pg-memory = "local_memory.cli:app"
pg-memory-mcp = "local_memory.mcp_server:main"
voiceqa = "voice_qa.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_memory", "src/voice_qa"]

[tool.hatch.build.targets.wheel.force-include]
"scenarios" = "voice_qa/scenario_data"

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "tests",
    "scenarios",
    "README.md",
    "AGENTS.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated.*",
]
